# ChangeLog for media-video/sundtek-tv
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sundtek-tv-140701.143639 (07 Jul 2014)

  07 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*sundtek-tv-140629.115654 (29 Jun 2014)

  29 Jun 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*sundtek-tv-140601.005015 (03 Jun 2014)

  03 Jun 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*sundtek-tv-140528.222950 (29 May 2014)

  29 May 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. openat() fixed on 32 bit: tar-1.27.1 works.
  Thanks again to the Sundtek support!

*sundtek-tv-140517.123345 (24 May 2014)

  24 May 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*sundtek-tv-140510.143826-r1 (12 May 2014)

  12 May 2014; Martin Väth <martin@mvath.de>:
  Add check for INPUT_UINPUT ball. Thanks again to the Sundtek support!

*sundtek-tv-140510.143826 (11 May 2014)

  11 May 2014; Martin Väth <martin@mvath.de>:
  Move to versioned tarball support. Thanks to the Sundtek support!

*sundtek-tv-20140510 (11 May 2014)

  11 May 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*sundtek-tv-20140428 (04 May 2014)

  04 May 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Avoid install -r

*sundtek-tv-20140414 (14 Apr 2014)

  14 Apr 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*sundtek-tv-20140402 (13 Apr 2014)

  13 Apr 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Remove IUSE=doc

*sundtek-tv-20140321-r1 (17 Feb 2014)

  30 Mar 2014; Martin Väth <martin@mvath.de>:
  Support mediaclient.{video,audio,dvb} wrapper scripts;
  provide local systemd service for default settings

*sundtek-tv-20140321 (17 Feb 2014)

  29 Mar 2014; Martin Väth <martin@mvath.de>:
  Add zsh completion support. Version bump
