@@ -1,0 +1,1 @@
+DIST schedule-1.0.tar.gz 8905 SHA256 8ad57b8f78ebf53840423144f997f1315d4325bc1f2be20fc910eb3cd15be0fc SHA512 807609dcdab10a42c0402e3b68903560871106059bd5917c6b541a95c1854a65888d5f932461cd5609c40881d809fd58b6e699d47b9a46eea7e3246a188916e7 WHIRLPOOL a31862606376d474452bce94f843fc421916fea2d847f3bd0a0691041bb12bf6cfa65367a39e5ee1aab8e98e1b22fdaa9c11b01c85fe085c3b1c415469f6fa33
