@@ -1,0 +1,8 @@
+# ChangeLog for sys-apps/schedule
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+*starter-1.0 (13 Jul 2014)
+
+  13 Jul 2014; Martin Väth <martin@mvath.de>:
+  New ebuild from scratch.
