@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sundtek-tv-140711.143644 (13 Jul 2014)
+
+  13 Jul 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild.
+
 *sundtek-tv-140701.143639 (07 Jul 2014)
 
   07 Jul 2014; Martin Väth <martin@mvath.de>:
